# test-python-sqlite-jsonb

./: README.md  main.py  pyproject.toml
